--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,21 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preload" href="/assets/2.gif" as="image" />
+    <link rel="preload" href="/assets/4.gif" as="image" />
+    <link rel="preload" href="/assets/8.gif" as="image" />
+    <link rel="preload" href="/assets/16.gif" as="image" />
+    <link rel="preload" href="/assets/32.gif" as="image" />
+    <link rel="preload" href="/assets/64.gif" as="image" />
+    <link rel="preload" href="/assets/128.gif" as="image" />
+    <link rel="preload" href="/assets/256.gif" as="image" />
+    <link rel="prefetch" href="/assets/512.gif" as="image" />
+    <link rel="prefetch" href="/assets/1024.gif" as="image" />
+    <link rel="prefetch" href="/assets/2048.gif" as="image" />
+    `
+    <link rel="prefetch" href="/assets/try-again.gif" as="image" />
+    <link rel="prefetch" href="/assets/game-over.gif" as="image" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
